%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: LaLupe
  serializedVersion: 2
  m_AnimatorParameters:
  - m_Name: CutsceneMode
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: CutsceneAction
    m_Type: 3
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Dodge
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Warp
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Attacking
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Hurt
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 3
    m_Name: Base Layer
    m_StateMachine: {fileID: 110707440}
    m_Mask: {fileID: 0}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!1101 &110106120
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110246828}
  m_DstState: {fileID: 110236602}
  m_TransitionDuration: .187823951
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: CutsceneAction
    m_EventTreshold: 0
    m_ExitTime: .800000012
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110110368
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110257852}
  m_DstState: {fileID: 110288534}
  m_TransitionDuration: 3.32941175
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: CutsceneAction
    m_EventTreshold: 8
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110111302
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110227970}
  m_DstState: {fileID: 110257852}
  m_TransitionDuration: .0535031706
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: CutsceneAction
    m_EventTreshold: 3
    m_ExitTime: .333333313
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110113648
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110281510}
  m_DstState: {fileID: 110236602}
  m_TransitionDuration: .171969771
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: CutsceneAction
    m_EventTreshold: 0
    m_ExitTime: .8125
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110115976
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110265482}
  m_DstState: {fileID: 110236602}
  m_TransitionDuration: .0599329434
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Hurt
    m_EventTreshold: 0
    m_ExitTime: .940067053
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110118978
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110276474}
  m_DstState: {fileID: 110236514}
  m_TransitionDuration: .0686869547
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Hurt
    m_EventTreshold: 0
    m_ExitTime: .931313038
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110120434
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110250152}
  m_DstState: {fileID: 110243672}
  m_TransitionDuration: .352941096
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: CutsceneAction
    m_EventTreshold: 6
    m_ExitTime: .647058904
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110131490
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110236514}
  m_DstState: {fileID: 110257852}
  m_TransitionDuration: .0125806304
  m_TransitionOffset: .0118279457
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: CutsceneAction
    m_EventTreshold: 3
    m_ExitTime: .987419367
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110132840
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110269870}
  m_DstState: {fileID: 110236602}
  m_TransitionDuration: 1
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: 
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110136028
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110210426}
  m_DstState: {fileID: 110236602}
  m_TransitionDuration: .16216217
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: CutsceneAction
    m_EventTreshold: 0
    m_ExitTime: .837837815
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110143204
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110236602}
  m_DstState: {fileID: 110276474}
  m_TransitionDuration: .0109092072
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Warp
    m_EventTreshold: 0
    m_ExitTime: .699999928
  - m_ConditionMode: 1
    m_ConditionEvent: Attacking
    m_EventTreshold: 0
    m_ExitTime: .699999928
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110148192
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110236514}
  m_DstState: {fileID: 110265482}
  m_TransitionDuration: .0365152247
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Hurt
    m_EventTreshold: 0
    m_ExitTime: .9690907
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110155938
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110210426}
  m_DstState: {fileID: 110250152}
  m_TransitionDuration: .377189279
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: CutsceneAction
    m_EventTreshold: 5
    m_ExitTime: .623060107
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110157564
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110236602}
  m_DstState: {fileID: 110224260}
  m_TransitionDuration: .0547923706
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: CutsceneAction
    m_EventTreshold: 7
    m_ExitTime: .699999928
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110162422
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110236602}
  m_DstState: {fileID: 110281510}
  m_TransitionDuration: .270181924
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: CutsceneAction
    m_EventTreshold: 2
    m_ExitTime: .699999928
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110168156
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110285360}
  m_DstState: {fileID: 110236602}
  m_TransitionDuration: .304226518
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: CutsceneAction
    m_EventTreshold: 0
    m_ExitTime: .828571498
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110171114
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110257852}
  m_DstState: {fileID: 110210426}
  m_TransitionDuration: .372727454
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: CutsceneAction
    m_EventTreshold: 5
    m_ExitTime: .790909111
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110178298
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110236602}
  m_DstState: {fileID: 110285360}
  m_TransitionDuration: .00168588758
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: CutsceneAction
    m_EventTreshold: 5
    m_ExitTime: .699999928
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110182390
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110236602}
  m_DstState: {fileID: 110227970}
  m_TransitionDuration: .0264517255
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: CutsceneAction
    m_EventTreshold: 1
    m_ExitTime: .699999928
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110183932
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110236602}
  m_DstState: {fileID: 110243672}
  m_TransitionDuration: .0332829133
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: CutsceneAction
    m_EventTreshold: 16
    m_ExitTime: .699999928
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110185708
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110236602}
  m_DstState: {fileID: 110246828}
  m_TransitionDuration: .141101971
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: CutsceneAction
    m_EventTreshold: 15
    m_ExitTime: .699999928
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110187982
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110224260}
  m_DstState: {fileID: 110247160}
  m_TransitionDuration: .222893134
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: CutsceneAction
    m_EventTreshold: 8
    m_ExitTime: .96025151
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110189882
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110276474}
  m_DstState: {fileID: 110257852}
  m_TransitionDuration: .666666687
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: CutsceneAction
    m_EventTreshold: 3
    m_ExitTime: .333333313
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110195720
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110236602}
  m_DstState: {fileID: 110265482}
  m_TransitionDuration: .0205454621
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Warp
    m_EventTreshold: 0
    m_ExitTime: .969817877
  - m_ConditionMode: 2
    m_ConditionEvent: Attacking
    m_EventTreshold: 0
    m_ExitTime: .969817877
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110196494
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110227970}
  m_DstState: {fileID: 110236602}
  m_TransitionDuration: .261409909
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: CutsceneAction
    m_EventTreshold: 0
    m_ExitTime: .333333313
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110198346
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110236602}
  m_DstState: {fileID: 110288534}
  m_TransitionDuration: .0383457281
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: CutsceneAction
    m_EventTreshold: 8
    m_ExitTime: .699999928
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110199714
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110247160}
  m_DstState: {fileID: 110269870}
  m_TransitionDuration: .0286791436
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: CutsceneAction
    m_EventTreshold: 0
    m_ExitTime: .142858088
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110199934
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110236602}
  m_DstState: {fileID: 110257852}
  m_TransitionDuration: .0161292125
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: CutsceneAction
    m_EventTreshold: 3
    m_ExitTime: .699999928
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1102 &110210426
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Scream
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 2db0aeb206ebd364a9e9c7b11b701654, type: 2}
  m_ParentStateMachine: {fileID: 110707440}
  m_Position: {x: -12, y: 60, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110224260
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Ouch
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400022, guid: c991b2ac3fcc8d047a21767b2a2373d8, type: 3}
  m_ParentStateMachine: {fileID: 110707440}
  m_Position: {x: 204, y: 180, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110227970
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: CutsceneTeleport
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 21aa633a18e97e24fa6f1d531e3f7cfe, type: 2}
  m_ParentStateMachine: {fileID: 110707440}
  m_Position: {x: 264, y: -216, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110236514
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Slash
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: a74c619f13a100d4197177b8201f7d68, type: 2}
  m_ParentStateMachine: {fileID: 110707440}
  m_Position: {x: 552, y: 120, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110236602
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Idle
  m_Speed: .300000012
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: e625fed4c27eb4144a5c763e67bec9e1, type: 2}
  m_ParentStateMachine: {fileID: 110707440}
  m_Position: {x: 264, y: -12, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110243672
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Flee
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 8867c83f94c74f44894c0db914807358, type: 2}
  m_ParentStateMachine: {fileID: 110707440}
  m_Position: {x: -12, y: 228, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110246828
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Choke
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400026, guid: c991b2ac3fcc8d047a21767b2a2373d8, type: 3}
  m_ParentStateMachine: {fileID: 110707440}
  m_Position: {x: 624, y: 180, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110247160
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: WarpAway
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: e75083295a3847842893c6b64ed413b5, type: 2}
  m_ParentStateMachine: {fileID: 110707440}
  m_Position: {x: 276, y: 252, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110250152
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: ScreamLoop
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 278294d8e748f9548a08eb95cb07ed06, type: 2}
  m_ParentStateMachine: {fileID: 110707440}
  m_Position: {x: -12, y: 132, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110257852
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Hurt
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400006, guid: c991b2ac3fcc8d047a21767b2a2373d8, type: 3}
  m_ParentStateMachine: {fileID: 110707440}
  m_Position: {x: 0, y: -72, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110265482
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: TeleportFlee
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 21aa633a18e97e24fa6f1d531e3f7cfe, type: 2}
  m_ParentStateMachine: {fileID: 110707440}
  m_Position: {x: 552, y: 60, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110269870
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: WarpIn
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 8b0c6a7c296e33e46bd1086e8491ee26, type: 2}
  m_ParentStateMachine: {fileID: 110707440}
  m_Position: {x: 408, y: 180, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110276474
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: TeleportAttack
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: ecc19a5487be35d418ebaadfd20eed83, type: 2}
  m_ParentStateMachine: {fileID: 110707440}
  m_Position: {x: 264, y: 60, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110281510
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Laugh
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: fb501975fbda60d44b02f965833f78fb, type: 2}
  m_ParentStateMachine: {fileID: 110707440}
  m_Position: {x: 552, y: -12, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110285360
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Turn
  m_Speed: .600000024
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400018, guid: c991b2ac3fcc8d047a21767b2a2373d8, type: 3}
  m_ParentStateMachine: {fileID: 110707440}
  m_Position: {x: 516, y: -96, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110288534
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Death
  m_Speed: .699999988
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400020, guid: c991b2ac3fcc8d047a21767b2a2373d8, type: 3}
  m_ParentStateMachine: {fileID: 110707440}
  m_Position: {x: 456, y: -168, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110293606
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Hurt 0
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400006, guid: c991b2ac3fcc8d047a21767b2a2373d8, type: 3}
  m_ParentStateMachine: {fileID: 110707440}
  m_Position: {x: -12, y: -156, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1107 &110707440
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Base Layer
  m_DefaultState: {fileID: 110236602}
  m_States:
  - {fileID: 110236602}
  - {fileID: 110210426}
  - {fileID: 110236514}
  - {fileID: 110257852}
  - {fileID: 110281510}
  - {fileID: 110265482}
  - {fileID: 110276474}
  - {fileID: 110227970}
  - {fileID: 110250152}
  - {fileID: 110243672}
  - {fileID: 110285360}
  - {fileID: 110288534}
  - {fileID: 110247160}
  - {fileID: 110269870}
  - {fileID: 110224260}
  - {fileID: 110246828}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
    data:
      first: {fileID: 0}
      second: []
    data:
      first: {fileID: 110236602}
      second:
      - {fileID: 110162422}
      - {fileID: 110143204}
      - {fileID: 110195720}
      - {fileID: 110182390}
      - {fileID: 110199934}
      - {fileID: 110178298}
      - {fileID: 110198346}
      - {fileID: 110157564}
      - {fileID: 110185708}
      - {fileID: 110183932}
    data:
      first: {fileID: 110210426}
      second:
      - {fileID: 110136028}
      - {fileID: 110155938}
    data:
      first: {fileID: 110236514}
      second:
      - {fileID: 110148192}
      - {fileID: 110131490}
    data:
      first: {fileID: 110257852}
      second:
      - {fileID: 110171114}
      - {fileID: 110110368}
    data:
      first: {fileID: 110281510}
      second:
      - {fileID: 110113648}
    data:
      first: {fileID: 110265482}
      second:
      - {fileID: 110115976}
    data:
      first: {fileID: 110276474}
      second:
      - {fileID: 110118978}
      - {fileID: 110189882}
    data:
      first: {fileID: 110227970}
      second:
      - {fileID: 110196494}
      - {fileID: 110111302}
    data:
      first: {fileID: 110250152}
      second:
      - {fileID: 110120434}
    data:
      first: {fileID: 110243672}
      second: []
    data:
      first: {fileID: 110285360}
      second:
      - {fileID: 110168156}
    data:
      first: {fileID: 110247160}
      second:
      - {fileID: 110199714}
    data:
      first: {fileID: 110269870}
      second:
      - {fileID: 110132840}
    data:
      first: {fileID: 110224260}
      second:
      - {fileID: 110187982}
    data:
      first: {fileID: 110246828}
      second:
      - {fileID: 110106120}
  m_MotionSetCount: 1
  m_AnyStatePosition: {x: -24, y: -144, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
